--- a/Mirko/Mirko.Universal/Pages/AtNotificationsPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/AtNotificationsPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.AtNotificationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -61,18 +61,14 @@
                                    utils:Injectors.Notification="{x:Bind Data, Mode=OneWay}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
-
         </ListView>
 
-        <CommandBar Grid.Row="2"
-                    ClosedDisplayMode="Minimal">
-
+        <CommandBar ClosedDisplayMode="Minimal"
+                    Grid.Row="2">
             <CommandBar.SecondaryCommands>
                 <AppBarButton Label="usuń wszystkie powiadomienia"
                               Command="{x:Bind VM.DeleteAllAtNotifications}" />
             </CommandBar.SecondaryCommands>
-
         </CommandBar>
-        
     </Grid>
-</UserControl>
+</Page>
