--- a/Mirko/Mirko.Universal/Pages/BlacklistPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/BlacklistPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.BlacklistPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -110,4 +110,4 @@
         </Pivot>
     </Grid>
     
-</UserControl>
+</Page>
