--- a/Mirko/Mirko.Universal/Pages/ConversationPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/ConversationPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.ConversationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -15,15 +15,10 @@
     d:DesignWidth="400"
     DataContext="{Binding Messages, Mode=OneWay, Source={StaticResource Locator}}">
 
-    <UserControl.Resources>
+    <Page.Resources>
         <MenuFlyout x:Name="DeleteAttachmentFlyout">
             <MenuFlyoutItem Text="usuń" Click="MenuFlyoutItem_Click" />
         </MenuFlyout>
-
-        <!--Lennys Flyout-->
-        <Flyout x:Name="LennysFlyout">
-            <controls:LennyChooser LennySelected="LennyChooser_LennySelected" />
-        </Flyout>
 
         <DataTemplate x:Key="ReceivedMessage"
                       x:DataType="models:PMViewModel">
@@ -121,11 +116,11 @@
         <local:PMTemplateSelector x:Key="PMTemplateSelector"
                                   ReceivedTemplate="{StaticResource ReceivedMessage}"
                                   SentTemplate="{StaticResource SentMessage}" />
-    </UserControl.Resources>    
-    
+    </Page.Resources>
+
     <Grid x:Name="LayoutRoot"
           DataContext="{x:Bind VM.CurrentConversation}">
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -142,7 +137,7 @@
                     Height="{StaticResource HashtagNotificationHeaderHeight}">
 
                 <Grid x:Name="Header">
-                    
+
                     <i:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Tapped">
                             <core:InvokeCommandAction Command="{x:Bind VM.CurrentConversation.GoToProfilePage}"
@@ -184,16 +179,22 @@
         </StackPanel>
 
         <!--TODO: Content should be placed within the following grid-->
-
         <controls:ListViewEx x:Name="ListView"
-                                 Grid.Row="1"
-                                 ItemsSource="{x:Bind VM.CurrentConversation.Messages, Mode=OneWay}"
-                                 ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
-                                 ItemTemplateSelector="{StaticResource PMTemplateSelector}"
-                                 VirtualizingStackPanel.VirtualizationMode="Recycling"
-                                 IncrementalLoadingThreshold="6"
-                                 DataFetchSize="7">
+                             Grid.Row="1"
+                             ItemsSource="{x:Bind VM.CurrentConversation.Messages, Mode=OneWay}"
+                             ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
+                             ItemTemplateSelector="{StaticResource PMTemplateSelector}"
+                             VirtualizingStackPanel.VirtualizationMode="Recycling"
+                             IncrementalLoadingThreshold="6"
+                             DataFetchSize="7"
+                             RenderTransformOrigin="0,0">
 
+            <ListView.RenderTransform>
+                <TranslateTransform x:Name="ListViewTransform"
+                                    X="0"
+                                    Y="0" />
+            </ListView.RenderTransform>
+            
             <ListView.Header>
                 <Rectangle Fill="Transparent"/>
             </ListView.Header>
@@ -220,8 +221,6 @@
                                                         AcceptsReturn="True"
                                                         FontSize="{Binding Fonts.PMFontSize, Mode=OneWay, Source={StaticResource Locator}}"
                                                         Margin="12,7,12,7"
-                                                        GotFocus="TextBox_GotFocus"
-                                                        LostFocus="TextBox_LostFocus"
                                                         Text="{x:Bind VM.CurrentConversation.NewEntry.Text, Mode=TwoWay}"
                                                         Style="{StaticResource TextBoxStyle2}" />
                     </Border>
@@ -256,39 +255,48 @@
                                  HorizontalAlignment="Right" />
 
                     </Grid>
-
-                    <Rectangle Height="66"
-                               Fill="Transparent"
-                               Visibility="{Binding ElementName=TextBox, Path=AreSuggestionsOpen, 
-                                            Converter={StaticResource BoolToVisibility}}"
-                               x:Name="FooterSpacer" />
                 </StackPanel>
             </ListView.Footer>
 
         </controls:ListViewEx>
 
-        <CommandBar Grid.Row="2"
-                    x:Name="AppBar">
-            
+        <CommandBar x:Name="AppBar"
+                    Grid.Row="2"
+                    IsSticky="True"
+                    RenderTransformOrigin="0,0">
+
+            <CommandBar.RenderTransform>
+                <TranslateTransform x:Name="CommandBarTransform"
+                                    X="0"
+                                    Y="0" />
+            </CommandBar.RenderTransform>
+
             <AppBarButton x:Name="SendButton"
                           Label="wyślij"
                           Icon="Send"
                           IsEnabled="False"
                           Command="{x:Bind VM.CurrentConversation.SendMessageCommand, Mode=OneWay}" />
-            
+
             <AppBarButton Label="odśwież"
                           Icon="Refresh"
                           Command="{x:Bind VM.CurrentConversation.UpdateMessagesCommand, Mode=OneWay}" />
-            
+
             <AppBarButton Label="lenny"
-                          Icon="Emoji"
-                          Click="Lenny_Click" />
-            
+                          Icon="Emoji">
+                <AppBarButton.Flyout>
+                    <Flyout x:Name="LennyFlyout"
+                            FlyoutPresenterStyle="{StaticResource FlyoutPresenterNoPadding}">
+                        <controls:LennyChooser LennySelected="LennyChooser_LennySelected"
+                                               x:Name="LennyChooser"
+                                               Width="400"/>
+                    </Flyout>
+                </AppBarButton.Flyout>
+            </AppBarButton>
+
             <AppBarButton Label="załącznik"
                           Icon="Attach"
                           Command="{x:Bind VM.CurrentConversation.AddAttachment, Mode=OneWay}" />
-            
+
         </CommandBar>
-        
     </Grid>
-</UserControl>
+</Page>
