--- a/Mirko/Mirko.Universal/Pages/ConversationsPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/ConversationsPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.ConversationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -131,4 +131,4 @@
             </ListView>
         </Grid>
     </Grid>
-</UserControl>
+</Page>
