--- a/Mirko/Mirko.Universal/Pages/DebugPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/DebugPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.DebugPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -12,7 +12,7 @@
     d:DesignWidth="400"
     DataContext="{Binding Debug, Mode=OneWay, Source={StaticResource Locator}}">
     
-    <UserControl.Resources>
+    <Page.Resources>
         <DataTemplate x:Key="ListViewHeader"
                       x:DataType="x:String">
             <TextBlock Text="{x:Bind}"
@@ -28,7 +28,7 @@
                        Style="{StaticResource BodyTextBlockStyle}"
                        FontSize="16" />
         </DataTemplate>
-    </UserControl.Resources>
+    </Page.Resources>
 
     <i:Interaction.Behaviors>
         <core:EventTriggerBehavior EventName="Loaded">
@@ -36,15 +36,16 @@
         </core:EventTriggerBehavior>
     </i:Interaction.Behaviors>
 
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-
+        
         <ScrollViewer Grid.Row="0">
             <StackPanel Margin="10,0,0,0">
-                
+
                 <ListView HeaderTemplate="{StaticResource ListViewHeader}"
                           Header="Zarejestrowane zadania w tle:"
                           ItemTemplate="{StaticResource ListViewItem}"
@@ -55,7 +56,7 @@
                            Style="{StaticResource HeaderTextBlockStyle}"
                            Foreground="Gray"
                            FontSize="20" />
-                
+
                 <TextBlock FontSize="16"
                            Style="{StaticResource BodyTextBlockStyle}">
                     <Run Text="PseudoPush:" />
@@ -78,7 +79,7 @@
                     <Run Text="Trafień:" />
                     <Run Text="{x:Bind VM.ImgCacheHits, Mode=OneWay}" />
                 </TextBlock>
-                
+
             </StackPanel>
         </ScrollViewer>
 
@@ -86,12 +87,10 @@
             <AppBarButton Icon="ReShare"
                           Label="udostępnij logi"
                           Command="{x:Bind VM.ShareCommand}"/>
-            
+
             <AppBarButton Icon="Clear"
                           Label="wyczyść cache"
                           Command="{x:Bind VM.ClearCache}" />
         </CommandBar>
-        
     </Grid>
-   
-</UserControl>
+</Page>
