--- a/Mirko/Mirko.Universal/Pages/DonationPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/DonationPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.DonationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,7 +11,8 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
     
-    <Grid Margin="12,0,12,0">
+    <Grid Margin="12,0,12,0"
+          x:Name="LayoutRoot">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -37,4 +38,4 @@
                 Content="dokonaj dotacji" />
        
     </Grid>
-</UserControl>
+</Page>
