--- a/Mirko/Mirko.Universal/Pages/EmbedPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/EmbedPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.EmbedPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -37,4 +37,4 @@
             
         </Image>
     </ScrollViewer>
-</UserControl>
+</Page>
