--- a/Mirko/Mirko.Universal/Pages/EmptyPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/EmptyPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.EmptyPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -16,4 +16,4 @@
                FontSize="20"
                Foreground="LightGray" />
     
-</UserControl>
+</Page>
