--- a/Mirko/Mirko.Universal/Pages/HashtagFlipPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/HashtagFlipPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.HashtagFlipPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -72,7 +72,7 @@
                                            Grid.Column="0"
                                            Grid.ColumnSpan="3"
                                            Fill="Transparent" />
-                                
+
                                 <Rectangle Grid.Column="0"
                                            Grid.Row="1"
                                            x:Name="HeaderEdgeButton"
@@ -122,17 +122,17 @@
                           Tag="reply"
                           Icon="Comment"
                           Click="CommentButton_Click"/>
-            
+
             <AppBarButton Label="odśwież"
                           Tag="refresh"
                           Icon="Refresh"
                           Click="RefreshButton_Click" />
-            
+
             <AppBarButton Label="w górę"
                           Tag="up"
                           Icon="Up"
                           Click="ScrollUpButton_Click" />
-            
+
             <AppBarButton Label="daj plusa"
                           Tag="voteMulti"
                           Icon="Add"
@@ -143,8 +143,7 @@
                 <AppBarButton Label="udostępnij"
                               Click="ShareButton_Click" />
             </CommandBar.SecondaryCommands>
-            
+
         </CommandBar>
-        
     </Grid>
-</UserControl>
+</Page>
