--- a/Mirko/Mirko.Universal/Pages/NewEntryPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/NewEntryPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.NewEntryPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,7 +11,7 @@
     d:DesignWidth="400"
     DataContext="{Binding NewEntry, Mode=OneWay, Source={StaticResource Locator}}">
 
-    <UserControl.Resources>
+    <Page.Resources>
         <Flyout x:Name="HyperlinkFlyout">
             <Grid Height="180"
                   Width="250">
@@ -262,9 +262,10 @@
                 </ScrollViewer>
             </Grid>
         </DataTemplate>
-    </UserControl.Resources>
-    
-    <Grid x:Name="LayoutRoot">
+    </Page.Resources>
+
+    <Grid x:Name="LayoutRoot"
+          Background="{StaticResource NewEntryBackgroundDark}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -282,7 +283,7 @@
 
                     <VisualState.Setters>
                         <Setter Target="FlipView.ItemTemplate"
-                                Value="{StaticResource FlipViewTemplateDesktop}" />                        
+                                Value="{StaticResource FlipViewTemplateDesktop}" />
                     </VisualState.Setters>
 
                 </VisualState>
@@ -328,7 +329,7 @@
         <CommandBar x:Name="FormattingAppBar"
                     Grid.Row="2"
                     RequestedTheme="Light">
-            
+
             <AppBarButton RequestedTheme="Light"
                           Tag="spoiler"
                           Label="spoiler"
@@ -395,13 +396,19 @@
                     </AppBarButton.Icon>
                 </AppBarButton>
             </CommandBar.SecondaryCommands>
-            
         </CommandBar>
 
         <CommandBar Grid.Row="3"
-                    ClosedDisplayMode="Compact"
-                    x:Name="AppBar">
-            
+                    x:Name="AppBar"
+                    IsSticky="True"
+                    RenderTransformOrigin="0,0">
+
+            <CommandBar.RenderTransform>
+                <TranslateTransform x:Name="CommandBarTransform"
+                                    X="0"
+                                    Y="0" />
+            </CommandBar.RenderTransform>
+
             <AppBarButton Label="wyślij"
                           x:Name="SendButton"
                           Icon="Send"
@@ -410,26 +417,26 @@
 
             <AppBarButton Label="lenny"
                           Icon="Emoji">
-                
+
                 <AppBarButton.Flyout>
-                    <Flyout x:Name="LennyFlyout">
+                    <Flyout x:Name="LennyFlyout"
+                            FlyoutPresenterStyle="{StaticResource FlyoutPresenterNoPadding}">
                         <controls:LennyChooser LennySelected="LennyChooser_LennySelected"
                                                x:Name="LennyChooser"
                                                Width="400"/>
                     </Flyout>
                 </AppBarButton.Flyout>
-                
+
             </AppBarButton>
 
             <AppBarButton Label="załącznik"
                           Icon="Attach"
                           Command="{x:Bind VM.AddAttachment, Mode=OneWay}"
                           IsEnabled="{x:Bind VM.NewEntry.IsEditing, Converter={StaticResource InvertBool}, Mode=OneWay}" />
-            
+
             <AppBarToggleButton x:Name="FormattingButton"
                                 Visibility="Collapsed"
                                 Click="FormattingButton_Click"/>
-            
         </CommandBar>
     </Grid>
-</UserControl>
+</Page>
