--- a/Mirko/Mirko.Universal/Pages/ProfilePage.xaml
+++ b/Mirko/Mirko.Universal/Pages/ProfilePage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.ProfilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -14,43 +14,44 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto "/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
-    <controls:ListViewEx Margin="10,0,10,0"
+
+        <controls:ListViewEx Margin="10,0,10,0"
+                         Grid.Row="0"
                          ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
                          ItemsSource="{x:Bind VM.CurrentProfile.Entries, Mode=OneWay}"
                          VirtualizingStackPanel.VirtualizationMode="Recycling"
                          IncrementalLoadingThreshold="6"
                          DataFetchSize="7">
-        
-        <ListView.Header>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
 
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
+            <ListView.Header>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-                <controls:CachedImage Grid.Column="0"
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <controls:CachedImage Grid.Column="0"
                                       Grid.Row="0"
                                       Grid.RowSpan="3"
                                       Height="96"
                                       Width="96"
                                       URL="{x:Bind VM.CurrentProfile.Data.AvatarURL, Mode=OneWay}" />
 
-                <StackPanel Grid.Column="1"
+                    <StackPanel Grid.Column="1"
                             Grid.Row="0"
                             Orientation="Horizontal">
 
-                    <TextBlock x:Name="AuthorSexTB"
+                        <TextBlock x:Name="AuthorSexTB"
                                Margin="6,0,2,0"
                                FontWeight="SemiBold"
                                HorizontalAlignment="Left"
@@ -60,7 +61,7 @@
                                Text="{x:Bind VM.CurrentProfile.Data.Sex, Converter={StaticResource SexToText}, Mode=OneWay}"
                                Foreground="{x:Bind VM.CurrentProfile.Data.Sex, Converter={StaticResource SexToColor}, Mode=OneWay}" />
 
-                    <TextBlock x:Name="AuthorTB"
+                        <TextBlock x:Name="AuthorTB"
                                FontWeight="Normal"
                                HorizontalAlignment="Left"
                                VerticalAlignment="Center"
@@ -69,9 +70,9 @@
                                FontSize="19.2"
                                Text="{x:Bind VM.CurrentProfile.Data.Login, Mode=OneWay}"
                                Foreground="{x:Bind VM.CurrentProfile.Data.Group, Converter={StaticResource GroupToColor}, Mode=OneWay}"/>
-                </StackPanel>
+                    </StackPanel>
 
-                <TextBlock Grid.Column="1"
+                    <TextBlock Grid.Column="1"
                            Grid.Row="1"
                            Margin="6,0,0,0"
                            Foreground="Gray"
@@ -80,19 +81,19 @@
                     <Run Text="od"/>
                     <Run Text="{x:Bind VM.CurrentProfile.Data.SignupDate, Converter={StaticResource DateConverter}, Mode=OneWay}"/>
                     <Run Text="na Wykopie"/>
-                </TextBlock>
+                    </TextBlock>
 
-                <Grid Grid.Column="1"
+                    <Grid Grid.Column="1"
                       Grid.Row="2"
                       Margin="6,0,0,0">
 
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="Auto" />
-                        <ColumnDefinition Width="Auto" />
-                    </Grid.ColumnDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Column="0"
+                        <TextBlock Grid.Column="0"
                                Style="{StaticResource HeaderTextBlockStyle}"
                                FontSize="17.6"
                                TextAlignment="Center"
@@ -100,9 +101,9 @@
                         <Run Text="{x:Bind VM.CurrentProfile.Data.EntriesCount, Converter={StaticResource NumberSeparator}, Mode=OneWay}" />
                         <LineBreak />
                         <Run Text="wpisów" Foreground="Gray" FontSize="12.8"/>
-                    </TextBlock>
+                        </TextBlock>
 
-                    <TextBlock Grid.Column="1"
+                        <TextBlock Grid.Column="1"
                                Margin="8,0,0,0"
                                Style="{StaticResource HeaderTextBlockStyle}"
                                FontSize="17.6"
@@ -111,9 +112,9 @@
                         <Run Text="{x:Bind VM.CurrentProfile.Data.CommentsCount, Converter={StaticResource NumberSeparator}, Mode=OneWay}" />
                         <LineBreak />
                         <Run Text="komentarzy" Foreground="Gray" FontSize="12.8"/>
-                    </TextBlock>
+                        </TextBlock>
 
-                    <TextBlock Grid.Column="2"
+                        <TextBlock Grid.Column="2"
                                Margin="8,0,0,0"
                                Style="{StaticResource HeaderTextBlockStyle}"
                                FontSize="17.6"
@@ -122,32 +123,32 @@
                         <Run Text="{x:Bind VM.CurrentProfile.Data.FollowersCount, Converter={StaticResource NumberSeparator}, Mode=OneWay}" />
                         <LineBreak />
                         <Run Text="obserwujących" Foreground="Gray" FontSize="12.8"/>
-                    </TextBlock>
+                        </TextBlock>
 
-                </Grid>
-                
-                <TextBlock Grid.Row="4"
+                    </Grid>
+
+                    <TextBlock Grid.Row="4"
                            Grid.Column="0"
                            Grid.ColumnSpan="2"
                            Margin="0,10,0,0"
                            Style="{StaticResource TextBlockNoItems}"
                            Text="Brak wpisów."
                            Visibility="{x:Bind VM.CurrentProfile.Entries.HasNoItems, Converter={StaticResource BoolToVisibility}, Mode=OneWay}"/>
-            </Grid>
-        </ListView.Header>
-        
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <controls:Entry Margin="-18,0,-18,0" />
-            </DataTemplate>
-        </ListView.ItemTemplate>
+                </Grid>
+            </ListView.Header>
 
-        <ListView.Footer>
-            <Rectangle Fill="Transparent"
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <controls:Entry Margin="-18,0,-18,0" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+            <ListView.Footer>
+                <Rectangle Fill="Transparent"
                        Height="64" />
-        </ListView.Footer>
+            </ListView.Footer>
 
-    </controls:ListViewEx>
+        </controls:ListViewEx>
 
         <CommandBar Grid.Row="1"
                     Visibility="{x:Bind VM.CurrentProfile.Data.Login, Mode=OneWay, Converter={StaticResource ProfileAppBar}}">
@@ -159,7 +160,7 @@
                 <AppBarToggleButton.Icon>
                     <BitmapIcon UriSource="/Assets/appbar.eye.png" />
                 </AppBarToggleButton.Icon>
-                
+
             </AppBarToggleButton>
 
             <AppBarToggleButton Label="{x:Bind VM.CurrentProfile.Data.Blacklisted, Mode=OneWay, Converter={StaticResource BlacklistToText}}"
@@ -169,16 +170,13 @@
                 <AppBarToggleButton.Icon>
                     <BitmapIcon UriSource="/Assets/czacha.png" />
                 </AppBarToggleButton.Icon>
-                
+
             </AppBarToggleButton>
 
             <AppBarButton Label="wiadomość"
                           Icon="Message"
                           Command="{x:Bind VM.CurrentProfile.PM, Mode=OneWay}" />
-            
+
         </CommandBar>
-        
     </Grid>
-   
-    
-</UserControl>
+</Page>
