--- a/Mirko/Mirko.Universal/Pages/SettingsPage.xaml
+++ b/Mirko/Mirko.Universal/Pages/SettingsPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,21 +11,22 @@
     d:DesignHeight="1000"
     DataContext="{Binding Settings, Mode=OneWay, Source={StaticResource Locator}}">
     
-    <UserControl.Resources>
+    <Page.Resources>
         <DataTemplate x:Key="ToggleSwitchTemplate"
                       x:DataType="x:String">
             <TextBlock Text="{x:Bind}"
                        FontSize="16"
                        TextWrapping="Wrap"/>
         </DataTemplate>
-    </UserControl.Resources>
+    </Page.Resources>
 
-    <Grid x:Name="LayoutRoot">
+    <Grid x:Name="LayoutRoot"
+          Background="{StaticResource SettingsBackgroundDark}">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <!-- Title Panel -->
@@ -164,7 +165,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="*" />
                         </Grid.RowDefinitions>
-                        
+
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="*" />
@@ -234,4 +235,4 @@
 
         </CommandBar>
     </Grid>
-</UserControl>
+</Page>
