--- a/Mirko/Mirko.WindowsPhone/Pages/AtNotificationsPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/AtNotificationsPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.AtNotificationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -66,4 +66,16 @@
             </ListView>
         </Grid>
     </Grid>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar ClosedDisplayMode="Minimal">
+
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Label="usuń wszystkie powiadomienia"
+                              Command="{Binding DeleteAllAtNotifications}" />
+            </CommandBar.SecondaryCommands>
+
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+</Page>
