--- a/Mirko/Mirko.WindowsPhone/Pages/AttachmentPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/AttachmentPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.AttachmentPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -72,4 +72,14 @@
 
         </Grid>
     </Grid>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar>
+            <AppBarButton Label="ok"
+                          Icon="Accept"
+                          Command="{Binding AcceptAttachments}"
+                          x:Name="OKButton" />
+        </CommandBar>
+    </Page.BottomAppBar>
+
+</Page>
