--- a/Mirko/Mirko.WindowsPhone/Pages/ConversationPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/ConversationPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.ConversationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -15,7 +15,7 @@
     d:DesignWidth="400"
     DataContext="{Binding Messages, Mode=OneWay, Source={StaticResource Locator}}">
 
-    <UserControl.Resources>
+    <Page.Resources>
         <MenuFlyout x:Name="DeleteAttachmentFlyout">
             <MenuFlyoutItem Text="usuń" Click="MenuFlyoutItem_Click" />
         </MenuFlyout>
@@ -121,7 +121,7 @@
         <local:PMTemplateSelector x:Key="PMTemplateSelector"
                                   ReceivedTemplate="{StaticResource ReceivedMessage}"
                                   SentTemplate="{StaticResource SentMessage}" />
-    </UserControl.Resources>    
+    </Page.Resources>    
     
     <Grid x:Name="LayoutRoot"
           DataContext="{Binding CurrentConversation}">
@@ -273,4 +273,43 @@
             </controls:ListViewEx>
         </q:InputAwarePanel>
     </Grid>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar x:Name="AppBar">
+
+            <AppBarButton x:Name="SendButton"
+                          Label="wyślij"
+                          IsEnabled="False"
+                          Command="{Binding CurrentConversation.SendMessageCommand, Mode=OneWay}">
+                <AppBarButton.Icon>
+                    <BitmapIcon UriSource="/Assets/reply.png" />
+                </AppBarButton.Icon>
+            </AppBarButton>
+
+            <AppBarButton Label="odśwież"
+                          Command="{Binding CurrentConversation.UpdateMessagesCommand, Mode=OneWay}">
+                <AppBarButton.Icon>
+                    <BitmapIcon UriSource="/Assets/refresh.png" />
+                </AppBarButton.Icon>
+            </AppBarButton>
+
+            <AppBarButton Label="lenny"
+                          x:Name="LennyAppBar">
+                <AppBarButton.Icon>
+                    <BitmapIcon UriSource="/Assets/appbar.smiley.glasses.png" />
+                </AppBarButton.Icon>
+                <AppBarButton.Flyout>
+                    <Flyout x:Name="LennyFlyout">
+                        <controls:LennyChooser LennySelected="LennyChooser_LennySelected" />
+                    </Flyout>
+                </AppBarButton.Flyout>
+            </AppBarButton>
+
+            <AppBarButton Label="załącznik"
+                          Icon="Attach"
+                          Command="{Binding CurrentConversation.AddAttachment, Mode=OneWay}" />
+
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+</Page>
