--- a/Mirko/Mirko.WindowsPhone/Pages/DebugPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/DebugPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.DebugPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -83,4 +83,17 @@
 
         </Grid>
     </ScrollViewer>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar>
+            <AppBarButton Icon="ReShare"
+                          Label="udostępnij logi"
+                          Command="{Binding ShareCommand}"/>
+
+            <AppBarButton Icon="Clear"
+                          Label="wyczyść cache"
+                          Command="{Binding ClearCache}" />
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+</Page>
