--- a/Mirko/Mirko.WindowsPhone/Pages/DonationPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/DonationPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.DonationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -36,4 +36,4 @@
                 Content="dokonaj dotacji" />
        
     </Grid>
-</UserControl>
+</Page>
