--- a/Mirko/Mirko.WindowsPhone/Pages/EmbedPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/EmbedPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.EmbedPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -33,4 +33,4 @@
                IsDoubleTapEnabled="True"
                Stretch="Uniform" />
     </ScrollViewer>
-</UserControl>
+</Page>
