--- a/Mirko/Mirko.WindowsPhone/Pages/EntryPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/EntryPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.EntryPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -76,4 +76,44 @@
         </q:MultiSelectListView.Footer>
 
     </q:MultiSelectListView>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar x:Name="AppBar">
+            <AppBarButton Label="odpowiedz"
+                          Tag="reply"
+                          Click="CommentButton_Click"
+                          Visibility="{Binding Source={Binding Settings, Mode=OneWay, Source={StaticResource Locator}},
+                                       Path=UserInfo, Converter={StaticResource NullToVisibility}}">
+                <AppBarButton.Icon>
+                    <BitmapIcon UriSource="/Assets/reply.png" />
+                </AppBarButton.Icon>
+            </AppBarButton>
+
+            <AppBarButton Label="odśwież"
+                          Tag="refresh"
+                          Click="RefreshButton_Click">
+                <AppBarButton.Icon>
+                    <BitmapIcon UriSource="/Assets/refresh.png" />
+                </AppBarButton.Icon>
+            </AppBarButton>
+
+            <AppBarButton Label="daj plusa"
+                          Tag="voteMulti"
+                          Icon="Add"
+                          Visibility="Collapsed"
+                          Click="VoteMultipleButton_Click"/>
+
+            <AppBarButton Label="w górę"
+                          Tag="up"
+                          Icon="Up"
+                          Click="ScrollUpButton_Click" />
+
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Label="udostępnij"
+                              Click="ShareButton_Click" />
+            </CommandBar.SecondaryCommands>
+
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+</Page>
