--- a/Mirko/Mirko.WindowsPhone/Pages/HashtagNotificationsPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/HashtagNotificationsPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.HashtagNotificationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -88,4 +88,21 @@
 
         </q:MultiSelectListView>
     </Grid>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar ClosedDisplayMode="Minimal"
+                    x:Name="AppBar">
+            <AppBarButton x:Name="DeleteSelectedButton"
+                          Label="usuń"
+                          Icon="Delete"
+                          IsEnabled="False"
+                          Click="DeleteSelectedButton_Click"/>
+
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Label="usuń wszystkie"
+                              Command="{Binding DeleteCurrentHashtagNotifications}"/>
+            </CommandBar.SecondaryCommands>
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+</Page>
