--- a/Mirko/Mirko.WindowsPhone/Pages/LoginPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/LoginPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,7 +9,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     DataContext="{Binding Login, Mode=OneWay, Source={StaticResource Locator}}">
 
-    <UserControl.Resources>
+    <Page.Resources>
         <Flyout x:Key="ErrorFlyout">
             <TextBlock TextWrapping="Wrap"
                        Margin="19.5,9.5,19,0"
@@ -193,7 +193,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    </UserControl.Resources>
+    </Page.Resources>
     
     <Grid Margin="19,9.5,19,0">
         <Grid.RowDefinitions>
@@ -234,4 +234,17 @@
         </PasswordBox>
 
     </Grid>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar x:Name="CommandBar">
+
+            <AppBarButton Label="zaloguj"
+                          Icon="Accept"
+                          IsEnabled="False"
+                          Click="LoginButton_Click"
+                          x:Name="LoginButton"/>
+
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+</Page>
