--- a/Mirko/Mirko.WindowsPhone/Pages/ProfilePage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/ProfilePage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.ProfilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,10 +9,9 @@
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
-    DataContext="{Binding Profiles, Mode=OneWay, Source={StaticResource Locator}}">
+    DataContext="{Binding Profiles.CurrentProfile, Mode=OneWay, Source={StaticResource Locator}}">
     
     <controls:ListViewEx Margin="10,0,10,0"
-                         DataContext="{Binding CurrentProfile}"
                          Loaded="ListViewEx_Loaded"
                          ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
                          ItemsSource="{Binding Entries}"
@@ -144,4 +143,36 @@
         </ListView.Footer>
 
     </controls:ListViewEx>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar x:Name="AppBar"
+                    Visibility="{Binding Data.Login, Mode=OneWay, Converter={StaticResource ProfileAppBar}}">
+
+            <AppBarToggleButton Label="{Binding Data.Observed, Mode=OneWay, Converter={StaticResource ObservedToText}}"
+                                IsChecked="{Binding Data.Observed, Mode=TwoWay}"                                
+                                Command="{Binding Observe, Mode=OneWay}">
+
+                <AppBarToggleButton.Icon>
+                    <BitmapIcon UriSource="/Assets/appbar.eye.png" />
+                </AppBarToggleButton.Icon>
+
+            </AppBarToggleButton>
+
+            <AppBarToggleButton Label="{Binding Data.Blacklisted, Mode=OneWay, Converter={StaticResource BlacklistToText}}"
+                                IsChecked="{Binding Data.Blacklisted, Mode=TwoWay}"
+                                Command="{Binding Blacklist, Mode=OneWay}">
+
+                <AppBarToggleButton.Icon>
+                    <BitmapIcon UriSource="/Assets/czacha.png" />
+                </AppBarToggleButton.Icon>
+
+            </AppBarToggleButton>
+
+            <AppBarButton Label="wiadomość"
+                          Icon="Message"
+                          Command="{Binding PM, Mode=OneWay}" />
+
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+</Page>
