--- a/Mirko/Mirko.WindowsPhone/Pages/SettingsPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/SettingsPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<Page
     x:Class="Mirko.Pages.SettingsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,14 +10,14 @@
     mc:Ignorable="d"
     d:DesignHeight="1000"
     DataContext="{Binding Settings, Mode=OneWay, Source={StaticResource Locator}}">
-    
-    <UserControl.Resources>
+
+    <Page.Resources>
         <DataTemplate x:Key="ToggleSwitchTemplate">
             <TextBlock Text="{Binding}"
                        FontSize="20"
                        TextWrapping="Wrap"/>
         </DataTemplate>
-    </UserControl.Resources>
+    </Page.Resources>
 
     <Grid x:Name="LayoutRoot">
 
@@ -219,4 +219,19 @@
             </StackPanel>
         </ScrollViewer>
     </Grid>
-</UserControl>
+
+    <Page.BottomAppBar>
+        <CommandBar ClosedDisplayMode="Minimal">
+
+            <CommandBar.SecondaryCommands>
+                <AppBarButton Label="debug"
+                              Command="{Binding Main.GoToDebugPage, Source={StaticResource Locator}}" />
+
+                <AppBarButton Label="jak otwierać linki?"
+                              Command="{Binding Main.HowToOpenUris, Source={StaticResource Locator}}" />
+            </CommandBar.SecondaryCommands>
+
+        </CommandBar>
+    </Page.BottomAppBar>
+    
+</Page>
